# shadowsocks-manager

./: .dockerignore  .gitignore  .ssm-env-example  .travis.yml  CNAME  Dockerfile  MANIFEST.in  README.md  codecov.yml  common.sh  docker-build-and-run.sh  docker-entrypoint.sh  install-dependency.sh  install-extra.sh  install.sh  one-click-deploy.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup.sh  shadowsocks-manager-job  shadowsocks-manager-web  start-testserver.sh  tox-27.txt  tox.ini  tox.txt
.github/: dependabot.yml
.github/workflows/: ci-docker.yml  ci-pypi.yml  ci-testpypi.yml  ci-unittest.yml  docker-image.yml  main.yml
deploy/: install-dependency.sh  one-click-deploy.sh  runinenv.sh
deploy/nginx/conf.d/: shadowsocks-manager.conf
deploy/nginx/includes/: ssm-server-common.conf  ssm-upstream.conf
deploy/nginx/sites-available/: ssm-http.conf  ssm-https.conf  ssm.conf
deploy/nginx/sites-enabled/: ssm.conf
deploy/supervisor/default/: supervisor
deploy/supervisor/profile/: supervisor
deploy/supervisor/vendors/: shadowsocks-manager-celery.conf  shadowsocks-manager-celery.ini  shadowsocks-manager-uwsgi.conf
deploy/uwsgi/: uwsgi.ini
doc/: django-5-upgrade-plan.md
docker/: docker-build-and-run.sh  docker-entrypoint.sh  docker-ssm-setup.sh
docker/alpine/: Dockerfile
docker/debian/: Dockerfile
docker/slim/: Dockerfile
nginx/: nginx.conf
nginx/conf.d/: shadowsocks-manager.conf
shadowsocks_manager/: .env  __main__.py  auth.group.json  db-test.sqlite3-journal  django_celery_beat.crontabschedule.json  django_celery_beat.intervalschedule.json  django_celery_beat.periodictask.json  manage.py  setup.cfg  uwsgi.ini
shadowsocks_manager/args_formatter/: __init__.py  tests.py
shadowsocks_manager/domain/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
shadowsocks_manager/domain/fixtures/: nameserver.json
shadowsocks_manager/domain/management/commands/: domain_domain.py  domain_nameserver.py  domain_record.py  domain_site.py
shadowsocks_manager/dynamicmethod/: apps.py  models.py  tests.py
shadowsocks_manager/fixtures/: django_celery_beat.periodictask.json  sites.site.json
shadowsocks_manager/notification/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
shadowsocks_manager/notification/fixtures/: config.json  template-txt-to-json.py  template.json  template.txt
shadowsocks_manager/retry/: __init__.py  tests.py
shadowsocks_manager/shadowsocks/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
shadowsocks_manager/shadowsocks/fixtures/: config.json
shadowsocks_manager/shadowsocks/management/commands/: shadowsocks_config.py
shadowsocks_manager/shadowsocks_manager/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
shadowsocks_manager/shadowsocksz/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
shadowsocks_manager/shadowsocksz/fixtures/: config.json
shadowsocks_manager/shadowsocksz/management/commands/: shadowsocks_config.py
shadowsocks_manager/singleton/: admin.py  apps.py  models.py  views.py
shadowsocks_manager/statistic/: admin.py  apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
shadowsocks_manager/statistics/: __init__.py  admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
shadowsocks_manager/statistics/migrations/: 0001_initial.py
shadowsocks_manager/utils/: celery.py  celery_app.py  createsuperuser.py  dotenv.py  manage.py  superuser.py  tests.py  uwsgi.py  version.py  viewsets.py
shadowsocks_manager/utils/management/commands/: superuser.py
supervisor/: shadowsocks-manager-celery.ini  shadowsocks-manager-uwsgi.ini
supervisor/profile/: supervisor
supervisor/vendors/: shadowsocks-manager-celery.ini  shadowsocks-manager-uwsgi.ini
uwsgi/: uwsgi.ini
